# mp2p_icp-release

./: .clang-tidy  .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  agents.md  codecov.yml  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.circleci/: config.yml
.github/workflows/: check-clang-format.yml  ros-build.yml
apps/: CMakeLists.txt
apps/icp-log-viewer/: CMakeLists.txt  main.cpp
apps/icp-run/: CMakeLists.txt  main.cpp
apps/kitti2mm/: CMakeLists.txt  main.cpp
apps/mm-filter/: main.cpp  (+1 more)
debian/: changelog  control  copyright  gbp.conf  rules
demos/: icp-settings-2d-lidar-example-point2line.yaml  icp-settings-2d-lidar-example-point2point.yaml  icp-settings-example1.yaml  icp-settings-kitti.yaml  mm-filter_voxelmap_to_gridmap.yaml  sm2mm_bonxai_voxelmap.yaml  sm2mm_bonxai_voxelmap_gridmap.yaml  sm2mm_bonxai_voxelmap_gridmap_no_deskew.yaml  sm2mm_no_decim_imu.yaml  sm2mm_no_decim_imu_mls.yaml  sm2mm_no_decim_imu_mls_keyframe_map.yaml  sm2mm_pointcloud_voxelize.yaml  sm2mm_pointcloud_voxelize_keyframe_map.yaml  sm2mm_pointcloud_voxelize_no_deskew.yaml  sm2mm_voxels_static_dynamic_points.yaml
docs/: design_robust_prior_anchored_kernels.md
mp2p_icp/: CMakeLists.txt
mp2p_icp/include/mp2p_icp/: ICP.h  IterTermReason.h  LogRecord.h  Matcher.h  Matcher_Adaptive.h  Matcher_Cov2Cov.h  Matcher_Point2Plane.h  Matcher_Points_Base.h  Matcher_Points_DistanceThreshold.h  OptimalTF_Result.h  PairWeights.h  Pairings.h  Parameters.h  QualityEvaluator.h  QualityEvaluator_PairedRatio.h  QualityEvaluator_RangeImageSimilarity.h  QualityEvaluator_Voxels.h  Solver.h  Solver_GaussNewton.h  Solver_Horn.h  covariance.h  errorTerms.h  icp_pipeline_from_yaml.h  optimal_tf_gauss_newton.h  optimal_tf_horn.h  optimal_tf_olae.h  pt2ln_pl_to_pt2pt.h
mp2p_icp/src/: ICP.cpp  LogRecord.cpp  Matcher.cpp  Matcher_Adaptive.cpp  Matcher_Cov2Cov.cpp  Matcher_Point2Line.cpp  Matcher_Point2Plane.cpp  Matcher_Points_Base.cpp  Matcher_Points_DistanceThreshold.cpp  Matcher_Points_InlierRatio.cpp  PairWeights.cpp  Pairings.cpp  Parameters.cpp  QualityEvaluator.cpp  QualityEvaluator_RangeImageSimilarity.cpp  QualityEvaluator_Voxels.cpp  Results.cpp  Solver.cpp  Solver_GaussNewton.cpp  WeightParameters.cpp  covariance.cpp  errorTerms.cpp  icp_pipeline_from_yaml.cpp  optimal_tf_gauss_newton.cpp  optimal_tf_horn.cpp  pt2ln_pl_to_pt2pt.cpp  register.cpp  visit_correspondences.h
mp2p_icp_common/: CMakeLists.txt
mp2p_icp_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
mp2p_icp_filters/: CMakeLists.txt
mp2p_icp_filters/include/mp2p_icp_filters/: FilterAbsoluteTimestamp.h  FilterAdjustTimestamps.h  FilterBase.h  FilterBoundingBox.h  FilterByExpression.h  FilterByIntensity.h  FilterByRange.h  FilterByRing.h  FilterClear.h  FilterCurvature.h  FilterDecimate.h  FilterDecimateAdaptive.h  FilterDecimateVoxels.h  FilterDeleteLayer.h  FilterDeskew.h  FilterEdgesPlanes.h  FilterFartherPointSampling.h  FilterMLS.h  FilterMerge.h  FilterNormalizeIntensity.h  FilterPoleDetector.h  FilterPolygon2D.h  FilterRemoveByVoxelOccupancy.h  FilterRemovePointCloudField.h  FilterRenameLayer.h  FilterSOR.h  FilterVoxelSOR.h  FilterVoxelSlice.h  Generator.h  GeneratorEdgesFromRangeImage.h  PointCloudToVoxelGrid.h  PointCloudToVoxelGridSingle.h  sm2mm.h
mp2p_icp_filters/src/: FilterAbsoluteTimestamp.cpp  FilterAdjustTimestamps.cpp  FilterBase.cpp  FilterBoundingBox.cpp  FilterByExpression.cpp  FilterByIntensity.cpp  FilterByRange.cpp  FilterByRing.cpp  FilterClear.cpp  FilterCurvature.cpp  FilterDecimate.cpp  FilterDecimateAdaptive.cpp  FilterDecimateVoxels.cpp  FilterDeleteLayer.cpp  FilterDeskew.cpp  FilterEdgesPlanes.cpp  FilterFartherPointSampling.cpp  FilterMLS.cpp  FilterMerge.cpp  FilterNormalizeIntensity.cpp  FilterPoleDetector.cpp  FilterPolygon2D.cpp  FilterRemoveByVoxelOccupancy.cpp  FilterRemovePointCloudField.cpp  FilterRenameLayer.cpp  FilterSOR.cpp  FilterVoxelSOR.cpp  FilterVoxelSlice.cpp  Generator.cpp  GeneratorEdgesFromCurvature.cpp  GeneratorEdgesFromRangeImage.cpp  Generator_view_vector_avx.cpp  Generator_view_vector_impl.h  Generator_view_vector_sse2.cpp  PointCloudToVoxelGrid.cpp  PointCloudToVoxelGridSingle.cpp  register.cpp  sm2mm.cpp
mp2p_icp_map/: CMakeLists.txt
mp2p_icp_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
mp2p_icp_viz/apps/: CMakeLists.txt
mp2p_icp_viz/apps/icp-log-viewer/: main.cpp
rpm/: ros-humble-mp2p-icp-viz.spec  ros-humble-mp2p-icp.spec  ros-iron-mp2p-icp.spec  ros-jazzy-mp2p-icp-core.spec  ros-jazzy-mp2p-icp-viz.spec  ros-jazzy-mp2p-icp.spec  ros-kilted-mp2p-icp-core.spec  ros-kilted-mp2p-icp.spec  ros-lyrical-mp2p-icp-core.spec  ros-lyrical-mp2p-icp-viz.spec  ros-lyrical-mp2p-icp.spec  ros-rolling-mp2p-icp-core.spec  ros-rolling-mp2p-icp.spec  template.spec
scripts/: formatter.sh
tests/: CMakeLists.txt  test-georef-yaml.cpp  test-mp2p_FilterByExpression.cpp  test-mp2p_FilterByIntensity.cpp  test-mp2p_FilterByRange.cpp  test-mp2p_FilterClear.cpp  test-mp2p_FilterDecimate.cpp  test-mp2p_FilterDecimateAdaptive.cpp  test-mp2p_FilterDecimateRangeAdaptive.cpp  test-mp2p_FilterDecimateVoxels.cpp  test-mp2p_FilterEdgesPlanes.cpp  test-mp2p_FilterFartherPointSampling.cpp  test-mp2p_FilterMerge_view.cpp  test-mp2p_FilterPoleDetector.cpp  test-mp2p_FilterPolygon2D.cpp  test-mp2p_FilterRemovePointCloudField.cpp  test-mp2p_FilterRenameLayer.cpp  test-mp2p_FilterSOR.cpp  test-mp2p_FilterVoxelSOR.cpp  test-mp2p_Filters.cpp  test-mp2p_LogRecord.cpp  test-mp2p_PairWeights.cpp  test-mp2p_WeightParameters.cpp  test-mp2p_censi3d_covariance.cpp  test-mp2p_class_factory.cpp  test-mp2p_cov2cov.cpp  test-mp2p_deskew.cpp  test-mp2p_deskew_empty_buffer.cpp  test-mp2p_error_terms_jacobians.cpp  test-mp2p_estimate_points_eigen.cpp  test-mp2p_generator.cpp  test-mp2p_generator_view_vector.cpp  test-mp2p_gicp_pipeline_benchmark.cpp  test-mp2p_icp_algos.cpp  test-mp2p_map_serialization.cpp  test-mp2p_matcher_pt2pl.cpp  test-mp2p_matcher_pt2pt.cpp  test-mp2p_optimal_tf_algos.cpp  test-mp2p_optimize_cov2cov.cpp  test-mp2p_optimize_cov2cov_with_prior.cpp  (+6 more)
(+159 files in other folders)
