<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- Metapackage kept for backward compatibility: anyone with
     <depend>mp2p_icp</depend> (or `apt install ros-$ROS_DISTRO-mp2p-icp`)
     keeps getting the exact same set of libraries and applications as
     before this repo was split into mp2p_icp_core (headless libs + CLI
     apps) and mp2p_icp_viz (GUI apps). New consumers that only need the
     headless C++ libraries should depend on mp2p_icp_core directly to
     avoid pulling in mrpt_libgui.
-->
<package format="3">
  <name>mp2p_icp</name>
  <version>2.12.0</version>
  <description>Metapackage for mp2p_icp: depends on mp2p_icp_core (headless libraries and CLI applications) and mp2p_icp_viz (GUI applications).</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="COPYING">BSD-3-Clause</license>

  <url type="website">https://github.com/MOLAorg/mp2p_icp</url>

  <depend>mp2p_icp_core</depend>
  <depend>mp2p_icp_viz</depend>

  <!-- Minimum entries to release non-catkin packages -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->
</package>
